--- a/Journal/Journal/Views/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Views/Base.lproj/Main.storyboard
@@ -18,50 +18,65 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="aFU-hW-2Ou">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="aFU-hW-2Ou">
                                 <rect key="frame" x="0.0" y="140" width="414" height="722"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="EntryCell" rowHeight="119" id="Yfz-Tf-Cs0">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="119"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleAspectFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="EntryCell" rowHeight="150" id="Yfz-Tf-Cs0" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="150"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Yfz-Tf-Cs0" id="fz1-QG-7df" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="118.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="149.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is the Creative TItle" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ixc-Ns-Q7j">
-                                                    <rect key="frame" x="20" y="11" width="219.5" height="24"/>
-                                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Body Text" lineBreakMode="wordWrap" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qFd-ks-GiV">
-                                                    <rect key="frame" x="20" y="43" width="374" height="65"/>
+                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="49" translatesAutoresizingMaskIntoConstraints="NO" id="FXh-jE-hPJ">
+                                                    <rect key="frame" x="20" y="11" width="374" height="24"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is the Creative TItle" textAlignment="natural" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ixc-Ns-Q7j">
+                                                            <rect key="frame" x="0.0" y="0.0" width="219.5" height="24"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8/9/18, 2:43pm" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rUi-ol-xFO">
+                                                            <rect key="frame" x="268.5" y="0.0" width="105.5" height="24"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="Ixc-Ns-Q7j" firstAttribute="top" secondItem="FXh-jE-hPJ" secondAttribute="topMargin" id="1pg-db-K2D"/>
+                                                        <constraint firstItem="Ixc-Ns-Q7j" firstAttribute="bottom" secondItem="FXh-jE-hPJ" secondAttribute="bottomMargin" id="6Nb-uF-ayH"/>
+                                                        <constraint firstItem="Ixc-Ns-Q7j" firstAttribute="leading" secondItem="FXh-jE-hPJ" secondAttribute="leadingMargin" id="Bcp-Zr-XpL"/>
+                                                        <constraint firstItem="rUi-ol-xFO" firstAttribute="top" secondItem="FXh-jE-hPJ" secondAttribute="topMargin" id="MjO-zA-dci"/>
+                                                        <constraint firstItem="rUi-ol-xFO" firstAttribute="trailing" secondItem="FXh-jE-hPJ" secondAttribute="trailingMargin" id="TS7-9Y-xh1"/>
+                                                        <constraint firstItem="rUi-ol-xFO" firstAttribute="bottom" secondItem="FXh-jE-hPJ" secondAttribute="bottomMargin" id="i8n-KX-1eo"/>
+                                                        <constraint firstItem="rUi-ol-xFO" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Ixc-Ns-Q7j" secondAttribute="trailing" constant="8" id="ujd-yy-F63"/>
+                                                    </constraints>
+                                                </stackView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Body Text" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qFd-ks-GiV">
+                                                    <rect key="frame" x="20" y="43" width="374" height="96"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8/9/18, 2:43pm" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rUi-ol-xFO">
-                                                    <rect key="frame" x="288.5" y="11" width="105.5" height="18"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="rUi-ol-xFO" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Ixc-Ns-Q7j" secondAttribute="trailing" constant="8" id="5t5-Mp-FbF"/>
-                                                <constraint firstItem="Ixc-Ns-Q7j" firstAttribute="leading" secondItem="fz1-QG-7df" secondAttribute="leadingMargin" id="PZ4-Rc-pry"/>
-                                                <constraint firstItem="qFd-ks-GiV" firstAttribute="trailing" secondItem="fz1-QG-7df" secondAttribute="trailingMargin" id="Q3H-Yc-8La"/>
-                                                <constraint firstItem="qFd-ks-GiV" firstAttribute="leading" secondItem="fz1-QG-7df" secondAttribute="leadingMargin" id="Tmx-V5-NRL"/>
-                                                <constraint firstItem="Ixc-Ns-Q7j" firstAttribute="top" secondItem="fz1-QG-7df" secondAttribute="topMargin" id="Wck-mn-GYY"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="rUi-ol-xFO" secondAttribute="trailing" id="YqT-5d-fPW"/>
-                                                <constraint firstItem="rUi-ol-xFO" firstAttribute="top" secondItem="fz1-QG-7df" secondAttribute="topMargin" id="aUa-kr-qNg"/>
-                                                <constraint firstItem="qFd-ks-GiV" firstAttribute="bottom" secondItem="fz1-QG-7df" secondAttribute="bottomMargin" id="fDK-aP-tFi"/>
-                                                <constraint firstItem="qFd-ks-GiV" firstAttribute="top" secondItem="Ixc-Ns-Q7j" secondAttribute="bottom" constant="8" id="gzi-gi-WMY"/>
+                                                <constraint firstItem="FXh-jE-hPJ" firstAttribute="leading" secondItem="fz1-QG-7df" secondAttribute="leadingMargin" id="0Zu-eJ-SLa"/>
+                                                <constraint firstItem="FXh-jE-hPJ" firstAttribute="trailing" secondItem="fz1-QG-7df" secondAttribute="trailingMargin" id="5ah-gv-jIB"/>
+                                                <constraint firstItem="qFd-ks-GiV" firstAttribute="bottom" secondItem="fz1-QG-7df" secondAttribute="bottomMargin" id="Eue-97-wzd"/>
+                                                <constraint firstItem="qFd-ks-GiV" firstAttribute="leading" secondItem="fz1-QG-7df" secondAttribute="leadingMargin" id="IcB-5h-2w7"/>
+                                                <constraint firstItem="qFd-ks-GiV" firstAttribute="top" secondItem="FXh-jE-hPJ" secondAttribute="bottom" constant="8" id="cTU-Ok-aHP"/>
+                                                <constraint firstItem="qFd-ks-GiV" firstAttribute="trailing" secondItem="fz1-QG-7df" secondAttribute="trailingMargin" id="iGc-M8-mt1"/>
+                                                <constraint firstItem="FXh-jE-hPJ" firstAttribute="top" secondItem="fz1-QG-7df" secondAttribute="topMargin" id="xOb-kT-Xya"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <variation key="widthClass=regular" preservesSuperviewLayoutMargins="YES"/>
                                         <connections>
+                                            <outlet property="bodyTextLabel" destination="qFd-ks-GiV" id="HBq-Bv-lo4"/>
+                                            <outlet property="timeStampLabel" destination="rUi-ol-xFO" id="uB7-kb-39y"/>
+                                            <outlet property="titleLabel" destination="Ixc-Ns-Q7j" id="cOJ-0t-zvL"/>
                                             <segue destination="qw0-Rq-dTJ" kind="show" identifier="EntryDetailSegue" id="b2b-aF-zfe"/>
                                         </connections>
                                     </tableViewCell>
@@ -73,6 +88,12 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="aFU-hW-2Ou" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="AKQ-pE-5hb"/>
+                            <constraint firstItem="aFU-hW-2Ou" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="w0Y-8p-k5J"/>
+                            <constraint firstItem="aFU-hW-2Ou" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="wEw-IX-4nQ"/>
+                            <constraint firstItem="aFU-hW-2Ou" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="zfQ-zP-9mD"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="Journal" id="W3p-Jm-oUJ">
