--- a/Journal/Journal/Journal/Resources/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Journal/Resources/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="105" id="uGd-UH-OeN" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EntryCell" rowHeight="105" id="uGd-UH-OeN" customClass="EntryTableViewCell" customModule="Journal" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="28" width="414" height="105"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="uGd-UH-OeN" id="69d-IY-psO">
@@ -117,7 +117,6 @@
                         <barButtonItem key="rightBarButtonItem" title="Item" id="Gyd-i6-3Q7"/>
                     </navigationItem>
                     <connections>
-                        <outlet property="enteriesTextView" destination="Lg5-Tb-xgS" id="g1Y-3D-mL9"/>
                         <outlet property="enteryTextField" destination="inV-rg-lJ7" id="egb-uE-xMU"/>
                     </connections>
                 </viewController>
