Monday MVP is done

--- a/Journal-CoreData/Journal-CoreData/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal-CoreData/Journal-CoreData/Storyboards/Base.lproj/Main.storyboard
@@ -39,7 +39,7 @@
                     <navigationItem key="navigationItem" title="Journal" id="3HW-fY-5Fi">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="xAX-5n-dOh">
                             <connections>
-                                <segue destination="Bq5-vK-yMi" kind="show" identifier="JournalEntrySegue" id="wcW-K3-wWR"/>
+                                <segue destination="Bq5-vK-yMi" kind="show" identifier="AddEntrySegue" id="wcW-K3-wWR"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -166,6 +166,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="i22-ch-M9I"/>
+        <segue reference="wcW-K3-wWR"/>
     </inferredMetricsTieBreakers>
 </document>
