Some UI and UX changes

--- a/Journal-CoreData/Journal-CoreData/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal-CoreData/Journal-CoreData/Storyboards/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Journal-->
+        <!--📓 Journal-->
         <scene sceneID="43j-Yu-hxC">
             <objects>
                 <tableViewController id="Xat-fc-0xY" customClass="EntriesTableViewController" customModule="Journal_CoreData" customModuleProvider="target" sceneMemberID="viewController">
@@ -32,7 +32,7 @@
                                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="01f-dw-ZzD">
                                                     <rect key="frame" x="0.0" y="0.0" width="348" height="20.5"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title of Entry" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jua-jq-oVn">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Title of Entry" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jua-jq-oVn">
                                                             <rect key="frame" x="0.0" y="0.0" width="242.5" height="20.5"/>
                                                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                             <nil key="textColor"/>
@@ -78,7 +78,7 @@
                             <outlet property="delegate" destination="Xat-fc-0xY" id="sA5-it-BZI"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Journal" id="3HW-fY-5Fi">
+                    <navigationItem key="navigationItem" title="📓 Journal" id="3HW-fY-5Fi">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="xAX-5n-dOh">
                             <connections>
                                 <segue destination="Bq5-vK-yMi" kind="show" identifier="AddEntrySegue" id="wcW-K3-wWR"/>
