--- a/journal-coredata/journal-coredata/Storyboards/Base.lproj/Main.storyboard
+++ b/journal-coredata/journal-coredata/Storyboards/Base.lproj/Main.storyboard
@@ -90,28 +90,42 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a Title..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aMv-7N-ouc">
-                                <rect key="frame" x="20" y="160" width="374" height="30"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="uw4-eA-S3d">
-                                <rect key="frame" x="20" y="210" width="374" height="302"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="jJH-0m-IZO">
+                                <rect key="frame" x="20" y="160" width="375" height="473"/>
+                                <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="RQQ-o0-EXN">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="29"/>
+                                        <segments>
+                                            <segment title="😎"/>
+                                            <segment title="😐"/>
+                                            <segment title="🥺"/>
+                                        </segments>
+                                    </segmentedControl>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a Title..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aMv-7N-ouc">
+                                        <rect key="frame" x="0.0" y="48" width="375" height="30"/>
+                                        <nil key="textColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="uw4-eA-S3d">
+                                        <rect key="frame" x="0.0" y="98" width="375" height="375"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="375" id="8TI-ui-Dwb"/>
+                                            <constraint firstAttribute="width" constant="375" id="AaG-NT-sqA"/>
+                                            <constraint firstAttribute="width" secondItem="uw4-eA-S3d" secondAttribute="height" multiplier="1:1" id="VCk-Jk-V9v"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="uw4-eA-S3d" firstAttribute="top" secondItem="aMv-7N-ouc" secondAttribute="bottom" constant="20" id="GHd-lu-yIR"/>
-                            <constraint firstItem="uw4-eA-S3d" firstAttribute="leading" secondItem="Odq-jB-Ec4" secondAttribute="leading" constant="20" id="Hgo-lD-Ux7"/>
-                            <constraint firstItem="Odq-jB-Ec4" firstAttribute="trailing" secondItem="aMv-7N-ouc" secondAttribute="trailing" constant="20" id="RdS-hC-95V"/>
-                            <constraint firstItem="aMv-7N-ouc" firstAttribute="leading" secondItem="Odq-jB-Ec4" secondAttribute="leading" constant="20" id="bjz-DP-e2Z"/>
-                            <constraint firstItem="Odq-jB-Ec4" firstAttribute="trailing" secondItem="uw4-eA-S3d" secondAttribute="trailing" constant="20" id="jOL-XC-qOf"/>
-                            <constraint firstItem="Odq-jB-Ec4" firstAttribute="bottom" secondItem="uw4-eA-S3d" secondAttribute="bottom" constant="350" id="kTt-oI-d0Z"/>
-                            <constraint firstItem="aMv-7N-ouc" firstAttribute="top" secondItem="Odq-jB-Ec4" secondAttribute="top" constant="20" id="wDi-op-ryL"/>
+                            <constraint firstItem="jJH-0m-IZO" firstAttribute="top" secondItem="Odq-jB-Ec4" secondAttribute="top" constant="20" id="4zU-9H-jb3"/>
+                            <constraint firstItem="Odq-jB-Ec4" firstAttribute="trailing" secondItem="jJH-0m-IZO" secondAttribute="trailing" constant="20" id="FcD-2O-L3e"/>
+                            <constraint firstItem="jJH-0m-IZO" firstAttribute="leading" secondItem="Odq-jB-Ec4" secondAttribute="leading" constant="20" id="Pu4-G3-fKB"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Odq-jB-Ec4"/>
                     </view>
@@ -124,6 +138,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="bodyTextView" destination="uw4-eA-S3d" id="Gk5-j5-Anx"/>
+                        <outlet property="moodSegmentedControl" destination="RQQ-o0-EXN" id="xtf-bv-eAo"/>
                         <outlet property="titleTextField" destination="aMv-7N-ouc" id="vtn-GH-u1e"/>
                     </connections>
                 </viewController>
